# CMake_study

./: CMakeLists.txt  Readme.md  adds.cpp  adds.hh  main.cpp
Doc/Pybind11/: 解决找不到头文件.txt
PythonWrapper/: CMakeLists.txt  bind_add.cpp  bind_class.cpp  bind_del.cpp  bind_example.cpp
Test/: CMakeLists.txt  lesson.cp313-win_amd64.pyd  test_add.cpp  test_add.py  test_del.cpp
Test/C++/: test_add.cpp
Test/Python/: test_add.py  test_class.py  test_del.py
hello/: CMakeLists.txt  hello.cpp  hello.hh
lesson1_1/: CMakeLists.txt  add.cpp  add.hh  main.cpp
lesson1_1/include/: add.hh
lesson1_2/: CMakeLists.txt  main.cpp
lesson2_1/: CMakeLists.txt  main.cpp
lesson2_1/del/: CMakeLists.txt  del.cpp
lesson2_1/lib/: del.hh
lesson2_2/: CMakeLists.txt  main.cpp
lesson2_2/mul/: CMakeLists.txt  export.h  mul.cpp  mul.hh
lesson3_1/: CMakeLists.txt
lesson3_1/source/: sum.cpp  three_sum.cpp
